fix for bio-benefits image height on safari

--- a/src/components/BioBenefit/styles.scss
+++ b/src/components/BioBenefit/styles.scss
@@ -27,6 +27,7 @@
         img {
             width: 100%;
             max-width: 250px;
+            max-height: 250px;
             margin: 0 auto;
         }
 
